--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.0",
     "better-sqlite3": "^9.0.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "filesize": "^10.1.0",
     "husky": "^8.0.3",
